[package]
name = "continuity"
version = "0.1.0"
authors = ["Reeto Chatterjee <reetobratachatterjee@gmail.com>"]
edition = "2018"

[lib]
name = "torrent"
path = "src/torrent/lib.rs"

[dependencies]
serde = "1.0.84"
serde_bytes = "0.10.4"
serde_derive = "1.0.84"
failure = "0.1.5"
serde_bencode = "0.2.0"
reqwest = "0.9.5"
serde_urlencoded = "0.5.4"
log = "0.4.6"
rust-crypto = "0.2.36"
url = "1.7.2"

[dev-dependencies]
mockito = "0.17.0"
